fixed layout issues with sticky footer; re-did all css with comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,161 +1,213 @@
+/* Target the body section */
 body {
 	padding: 0;
 	margin: 0;
 	background-image: url("../images/grey_@2X.png");
+	
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
-header{
+/************************************************************************/
+/* Target the header and navigation section */
+header {
+	height: 60px;
 	margin: 0;
 	padding: 0;
 	background-color: #fff;
-	border-bottom-style: solid;
-	border-color: #ccc;
+	border-bottom: #ccc solid 2px;
 	overflow: hidden;
 }
 
-#navWrapper {
+header #navWrapper{
 	width: 960px;
 	margin: auto;
-	height: 70px;
-	padding: 0;
 	position: relative;
-}
-
-header nav {
-	float: right;
+	overflow: none;
 }
 
 header #logo {
 	float: left;
-	background-color: #4aaaa5;
-	font-size: 24px;
+	background: #4aaaa5;
+	font-size: 30px;
+	font-weight: 700;
 	color: #fff;
 	position: absolute;
-	height: 70px;
-	padding: 20px 0;
+	height: 50px;
+	padding: 5px 20px;
 	left: 0;
+	
+	display: table; /* Display the div as a table 
+									so the span can be vertically centered*/
 }
 
-header span{
-	height: 70px;
-	padding: 0 40px;
+#logo span {
+	color: #fff;
+	display: table-cell;
+	vertical-align: middle;
 }
 
-nav ul{
+header nav {
+	float: right;
+	height: 60px;
+}
+
+header nav ul {
 	float: left;
 	list-style: none;
-/*	background: #ccc;*/
-	padding: 10px 0 10px 30px;
+	height: 60px;
+
+	display: table;
 }
 
-nav ul li {
+header nav ul li {
 	float: left;
-	/*background: red;*/
-	/*padding: 0 0 0 50px;*/
 }
 
-nav ul li a {
+header nav ul li a {
 	text-decoration: none;
 	background: #fff;
-	color: #777;
-	border-right:1px solid #ccc;
+	border-right: 1px solid #ccc;
 	padding: 0 30px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	height: 60px;
+
+	display: table-cell;
+	vertical-align: middle;
 }
 
-nav ul li a:hover{
+/************************************************************************/
+/* Target the pseudo elements */
+nav ul li a:hover {
 	color: #49a978;
 }
 
-section{
-	width: 650px;
-	float: left;
+#selected {
+	color: #49a978;
+	text-decoration: underline;
 }
 
-aside{
-	width: 270px;
-	float: right;
-	text-align: center;
-	padding-bottom: 20px;
+.social-icons img {
+	opacity: 1;
 }
 
-section, aside{
-	background-color: #fff;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #ddd;
-}
-
-.container{
-	width: 960px;
-	margin: 0 auto 70px auto;
-	overflow: auto;
-}
-
-footer{
-	clear: both;
-	text-align: center;
-	background-color: #666;
-	color: #ccc;
-	width: 100%;
-	padding: 10px 0;
-	border-top: 10px solid #4aaaa5;
-	height: 70px;
-}
-
-#logo, #logo-text, h2, h3 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-h2, h3 {
-	color: #4aaaa5;
-}
-
-h3{
-	margin-bottom: 0;
-}
-
-p {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	margin-right: 10px;
-	margin-left: 10px;
-	line-height: 1.5em;
-	color: #777;
-}
-
-img {
-	float: left;
-	margin: 0 20px 10px 0;
-}
-
-.portfolio-content img {
-	float: left;
-	margin: 5px;
-}
-
-
-.bio-content, .portfolio-content, .contact-form-content {
-	padding: 20px;
-}
-
-.contact-content{
-	padding: 10px;
-}
-
-.social-icons img{
-	margin: 10px 5px;
-	padding-left: 8px;
-	padding-right: 5px;
+.social-icons img:hover {
 	opacity: 0.8;
 }
 
-
-#footer-text {
-	padding: 20px;
+/************************************************************************/
+/* Clear-fix */
+.clearfix:before,
+.clearfix:after,
+.clearfix {
+    content: "";
+    display: block;
+    clear: both;
 }
 
-/* Form CSS */
+/************************************************************************/
+/* Target the overall content container */
+.container {
+	width: 960px;
+	margin: 0 auto;
+	padding: 40px 0;
 
+	flex: 1;
+}
+
+/************************************************************************/
+/* Section selectors */
+.container section {
+	float: left;
+	width: 588px; /* Modified to 588 due to 30px of padding on left and right */
+	background: #fff;
+	padding: 40px 30px;
+
+	border: 1px solid #ddd;
+}
+
+.bio-content img {
+	float: left;
+	padding: 10px 20px 10px 0;
+}
+
+.bio-content p {
+	padding: 10px 10px 0 0;
+	line-height: 1.5em;
+}
+
+.portfolio-content {
+	display: grid;
+	grid-template: 200px 200px / 300px 290px;
+	grid-gap: 10px;
+	justify-items: left;
+	align-content: center;
+
+	padding: 10px 0;
+}
+
+.portfolio-img {
+	justify-content: stretch;
+}
+
+.titleBlock p{
+	background-color: #4aaaa5;
+	opacity: 0.8;
+	color: #fff;
+	text-align: center;
+	width: 100%;
+	padding: 10px 0;
+	margin: -50px 0 0 0;
+}
+
+/************************************************************************/
+/* Aside selectors */
+.container aside {
+	float: right;
+	width: 210px; /* Modified to 210 due to 30px of padding on left and right */
+	background: #fff;
+	padding: 40px 30px;
+
+	border: 1px solid #ddd;
+}
+
+.container aside .social-icons {
+	width: 210px;
+	padding: 10px 10px;
+}
+
+section .contact-container {
+	float: left;
+	width: 500px; /* Modified to 610 due to 30px of padding on left and right */
+	background: #fff;
+	padding: 40px 30px;
+
+	border: 1px solid #ddd;
+}
+
+/************************************************************************/
+/* Footer selectors */
+footer {
+	height: 70px;
+}
+
+.table-class {
+	color: #fff;
+	background: #666;
+	text-align: center;
+	width: 100%;
+	display: table;
+
+}
+
+#footer-text {
+	display: table-cell;
+	vertical-align: middle;
+	height: 70px;
+}
+
+/************************************************************************/
+/* Form CSS */
 form{
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
@@ -189,68 +241,36 @@ input[type=submit]:hover {
 		font-size: 16px;
 }
 
-/* Misc CSS */
-
-#selected {
-	color: #49a978;
-	text-decoration: underline;
-	text-decoration-style: solid;
+/************************************************************************/
+/* Font modifications */
+#logo span, 
+h2,
+h3 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.bio-content hr {
-	display: block;
-  margin: 20px 0;
+header a,
+.bio-content p,
+footer {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 16px;
+	color: #777;
 }
 
-.social-icons img:hover{
-	opacity: 1;
+h2,
+h3 {
+	color: #4aaaa5;
 }
 
-/* Portfolio CSS */
+h2 {
+	font-size: 24px;
+	font-weight: 700;
+	padding-bottom: 20px;	
+}
 
-.titleBlock p{
-	background-color: #4aaaa5;
-	opacity: 0.8;
-	color: #fff;
+h3 {
+	font-size: 20px;
+	font-weight: 700;
 	text-align: center;
-	margin: 125px 0 0 0;
-	padding: 20px;
-}
-
-.left {
-    float: left;
-    margin-right: 10px;
-}
-
-.right {
-    float: right;
-    margin-left: 10px;
-}
-
-.col-1-2 {
-    width: 48%;
-    display: inline-block;
-    height: 200px;
-    margin-bottom: 20px;
-}
-
-/* Portfolio items */
-.p1{
-	background-image: url("../images/275x200.png");
-	background-size: 300px;
-}
-
-.p2{
-	background-image: url("../images/275x200.png");
-	background-size: 300px;
-}
-
-.p3{
-	background-image: url("../images/275x200.png");
-	background-size: 300px;
-}
-
-.p4{
-	background-image: url("../images/275x200.png");
-	background-size: 300px;
+	padding-bottom: 10px;
 }
